--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://fuckpoasting.github.io/"
+baseURL = "https://fuckpoasting.github.io/b/"
 languageCode = "en-us"
 googleAnalytics = ""
 relativeURLs = false
